css/style.css
/* ... */
.slider-control-paging li {
	float: left;
	margin: 2px 4px 2px 0;
}

.slider-control-paging li:last-child {
	margin-right: 0;
}

.slider-control-paging a {
	cursor: pointer;
	display: block;
	height: 44px;
	position: relative;
	text-indent: -999em;
	width: 44px;
}

.slider-control-paging a:before {
	background-color: #4d4d4d;
	content: "";
	height: 12px;
	left: 10px;
	position: absolute;
	top: 16px;
	width: 12px;
}

.slider-control-paging a:hover:before {
	background-color: #0A7FBA;
}

.slider-control-paging .slider-active:before,
.slider-control-paging .slider-active:hover:before {
	background-color: #2DAFF0;
}

.slider-direction-nav {
	clear: both;
	list-style: none;
	margin: 0;
	position: relative;
	width: 100%;
	z-index: 3;
}

.slider-direction-nav li {
	border-color: #fff;
	border-style: solid;
	border-width: 2px 1px 0 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing:    border-box;
	box-sizing:         border-box;
	float: left;
	text-align: center;
	width: 50%;
}

.slider-direction-nav li:last-child {
	border-width: 2px 0 0 1px;
}

.slider-direction-nav a {
	background-color: #000;
	display: block;
	font-size: 0;
	height: 46px;
}

.slider-direction-nav a:hover {
	background-color: #2DAFF0;
}

.slider-direction-nav a:before {
	color: #fff;
	content: "\f430";
	font-size: 32px;
	line-height: 46px;
}

.slider-direction-nav .slider-next:before {
	content: "\f429";
}

.slider-direction-nav .slider-disabled {
	display: none;
}


/**
 * 10.0 Multisite
 * -----------------------------------------------------------------------------
 */

.site-main .widecolumn {
	padding-top: 72px;
	width: auto;
}
.site-main .mu_register,
.widecolumn > h2,
.widecolumn > form {
	margin: 0 auto 48px;
	max-width: 474px;
	padding: 0 30px;
}

.site-main .mu_register #blog_title,
.site-main .mu_register #user_email,
.site-main .mu_register #blogname,
.site-main .mu_register #user_name {
	font-size: inherit;
	width: 90%;
}

.site-main .mu_register input[type="submit"],
.widecolumn #submit {
	font-size: inherit;
	width: auto;
}


/**
 * 11.0 Media Queries
 * -----------------------------------------------------------------------------
 */

/* Does the same thing as <meta name="viewport" content="width=device-width">,
 * but in the future W3C standard way. -ms- prefix is required for IE10+ to
 * render responsive styling in Windows 8 "snapped" views; IE10+ does not honor
 * the meta tag. See https://core.trac.wordpress.org/ticket/25888.
 */
@-ms-viewport {
	width: device-width;
}

@viewport {
	width: device-width;
}

@media screen and (max-width: 400px) {
	.list-view .site-content .post-thumbnail {
		background: none;
		width: auto;
		z-index: 2;
	}

	.list-view .site-content .post-thumbnail img {
		float: left;
		margin: 0 10px 3px 0;
		width: 84px;
	}

	.list-view .site-content .entry-header {
		background-color: transparent;
		padding: 0;
	}

	.list-view .content-area {
		margin-left: -30px;
		margin-right: -30px;
		margin-top: -60px;
	}

	.list-view .site-content .hentry {
		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
		margin: 0;
		min-height: 60px;
		padding: 12px 0 9px;
	}

	.list-view .site-content .cat-links,
	.list-view .site-content .type-post .entry-content,
	.list-view .site-content .type-page .entry-content,
	.list-view .site-content .type-post .entry-summary,
	.list-view .site-content .type-page .entry-summary,
	.list-view .site-content footer.entry-meta {
		display: none;
	}

	.list-view .site-content .entry-title {
		clear: none;
		font-size: 15px;
		font-weight: 900;
		line-height: 1.2;
		margin-bottom: 6px;
		text-transform: none;
	}

	.list-view .site-content .format-aside .entry-title,
	.list-view .site-content .format-link .entry-title,
	.list-view .site-content .format-quote .entry-title {
		display: block;
	}

	.list-view .site-content .entry-meta {
		background-color: transparent;
		clear: none;
		margin: 0;
		text-transform: none;
	}

	.archive-header,
	.page-header {
		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
		margin: 24px auto 0;
		padding-bottom: 24px;
	}

	.error404 .page-header {
		border-bottom: 0;
		margin: 0 auto 24px;
		padding: 0 10px;
	}
}
/* ... */

